// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignupResult renders as expected on failure 1`] = `
<mocked-mui-box
  sx="{\\"width\\":\\"100%\\",\\"height\\":\\"100%\\",\\"display\\":\\"flex\\",\\"justifyContent\\":\\"center\\",\\"alignItems\\":\\"center\\"}"
>
  <mocked-mui-card
    sx="{\\"width\\":400,\\"height\\":\\"unset\\",\\"display\\":\\"flex\\",\\"flexDirection\\":\\"column\\",\\"justifyContent\\":\\"center\\"}"
  >
    <mocked-mui-card-content
      sx="{\\"display\\":\\"flex\\",\\"flexDirection\\":\\"column\\",\\"alignItems\\":\\"stretch\\",\\"justifyContent\\":\\"start\\",\\"gap\\":1,\\"flex\\":1}"
    >
      <mocked-mui-typography
        color="text.primary"
        gutterbottom="true"
        sx="{\\"textAlign\\":\\"center\\",\\"fontWeight\\":\\"bold\\"}"
        variant="h5"
      >
        Error!
      </mocked-mui-typography>
      <mocked-mui-typography
        sx="{\\"display\\":\\"flex\\",\\"flexDirection\\":\\"row\\",\\"alignItems\\":\\"center\\"}"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeLarge css-104vmwh-MuiSvgIcon-root"
          data-testid="ErrorIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
        Uh oh, something went wrong. Please try again later.
      </mocked-mui-typography>
    </mocked-mui-card-content>
    <mocked-mui-card-actions
      sx="{\\"display\\":\\"flex\\",\\"flexDirection\\":\\"row\\",\\"justifyContent\\":\\"end\\",\\"gap\\":1}"
    >
      <mocked-mui-button
        type="submit"
        variant="contained"
      >
        Restart
      </mocked-mui-button>
    </mocked-mui-card-actions>
  </mocked-mui-card>
</mocked-mui-box>
`;

exports[`SignupResult renders as expected on success 1`] = `
<mocked-mui-box
  sx="{\\"width\\":\\"100%\\",\\"height\\":\\"100%\\",\\"display\\":\\"flex\\",\\"justifyContent\\":\\"center\\",\\"alignItems\\":\\"center\\"}"
>
  <mocked-mui-card
    sx="{\\"width\\":400,\\"height\\":\\"unset\\",\\"display\\":\\"flex\\",\\"flexDirection\\":\\"column\\",\\"justifyContent\\":\\"center\\"}"
  >
    <mocked-mui-card-content
      sx="{\\"display\\":\\"flex\\",\\"flexDirection\\":\\"column\\",\\"alignItems\\":\\"stretch\\",\\"justifyContent\\":\\"start\\",\\"gap\\":1,\\"flex\\":1}"
    >
      <mocked-mui-typography
        color="text.primary"
        gutterbottom="true"
        sx="{\\"textAlign\\":\\"center\\",\\"fontWeight\\":\\"bold\\"}"
        variant="h5"
      >
        Success!
      </mocked-mui-typography>
      <mocked-mui-typography
        sx="{\\"display\\":\\"flex\\",\\"flexDirection\\":\\"row\\",\\"alignItems\\":\\"center\\"}"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeLarge css-2s4ihf-MuiSvgIcon-root"
          data-testid="CheckIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
          />
        </svg>
        You should receive a confirmation email soon.
      </mocked-mui-typography>
    </mocked-mui-card-content>
    <mocked-mui-card-actions
      sx="{\\"display\\":\\"flex\\",\\"flexDirection\\":\\"row\\",\\"justifyContent\\":\\"end\\",\\"gap\\":1}"
    >
      <mocked-mui-button
        type="submit"
        variant="contained"
      >
        Restart
      </mocked-mui-button>
    </mocked-mui-card-actions>
  </mocked-mui-card>
</mocked-mui-box>
`;
